final commit, porting to react

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <nav id="nav-bar"></nav>
+    <div class="container">
+      <div class="content">
+        <h1>Helix Web Utility</h1>
+        <p>Helix Web Utility is a web application that allows you easily create items and plugins for your server.</p>
+        <p>Helix Web Utility is currently in development and is not ready for use.</p>
+      </div>
+    </div>
     <script src="js/nav.js"></script>
   </body>
 </html>
